--- a/lab-HW1.html
+++ b/lab-HW1.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Resume</title>
+    <title>Lab1-HW</title>
     <style>
         * {
             margin: 0;
@@ -170,19 +170,19 @@
     <div class="container">
         <div class="header">
             <div class="full-name">
-                <span class="first-name">John</span>
-                <span class="last-name">Doe</span>
+                <span class="first-name">FRANK</span>
+                <span class="last-name">HUANG</span>
             </div>
             <div class="contact-info">
                 <span class="email">Email: </span>
-                <span class="email-val">john.doe@gmail.com</span>
+                <span class="email-val">Lonelyflm@gmail.com</span>
                 <span class="separator"></span>
                 <span class="phone">Phone: </span>
-                <span class="phone-val">111-222-3333</span>
+                <span class="phone-val">0905-080-162</span>
             </div>
 
             <div>
-                <img src="donald-5103361_960_720.png" width="60%">
+                <img src="ghost.jpg" width="60%">
             </div>
 
             <div class="about">
